--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,7 +12,7 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'build',
-      '-t', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$_PACKAGE_I_TYPE',
+      '-t', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$COMMIT_SHA',
       '-f', 'Dockerfile',
       '--cache-from', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:latest', './dist',
       '--build-arg', 'REPO=$_PACKAGE_I_REPO',
@@ -24,15 +24,15 @@ steps:
     dir: 'builder'
   # Push the image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$_PACKAGE_I_TYPE']
+    args: ['push', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$COMMIT_SHA']
   # Tag the image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['tag', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$_PACKAGE_I_TYPE', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$_PACKAGE_I_TYPE']
+    args: ['tag', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$COMMIT_SHA', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$COMMIT_SHA']
   # Push the image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$_PACKAGE_I_TYPE']
+    args: ['push', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$COMMIT_SHA']
 images:
-  - 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$_PACKAGE_I_TYPE'
+  - 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$COMMIT_SHA'
 options:
   substitutionOption: ALLOW_LOOSE
   logging: CLOUD_LOGGING_ONLY
