--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,5 @@
-# gcloud builds submit --config ./tools/cloudbuild.yaml --region=us-central1 --substitutions=_PACKAGE_I_REPO=https://github.com/RichardAH/rippled.git,_PACKAGE_I_BRANCH=icv2
+# gcloud builds submit --config ./tools/cloudbuild.yaml --region=us-central1 --substitutions=_REPO=https://github.com/RichardAH/rippled.git,_BRANCH=PaychanAndEscrowForTokens,_NAME=icv2
+# NOTE: This is triggered for each sidechain.
 steps:
   # RIPPLED
   # Pull the latest image
@@ -7,16 +8,16 @@ steps:
     args:
       - '-c'
       - |
-        docker pull gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:latest || exit 0
+        docker pull gcr.io/$PROJECT_ID/$_NAME:latest || exit 0
   # Build & Tag the image
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'build',
-      '-t', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$COMMIT_SHA',
+      '-t', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA',
       '-f', 'Dockerfile',
-      '--cache-from', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:latest', '.',
-      '--build-arg', 'REPO=$_PACKAGE_I_REPO',
-      '--build-arg', 'BRANCH=PaychanAndEscrowForTokens',
+      '--cache-from', 'gcr.io/$PROJECT_ID/$_NAME:latest', '.',
+      '--build-arg', 'REPO=$_REPO',
+      '--build-arg', 'BRANCH=$_BRANCH',
       '--build-arg', 'BOOST_ROOT=/io/boost_1_75_0',
       '--build-arg', 'Boost_LIBRARY_DIRS=/io/boost_1_75_0/libs',
       '--build-arg', 'BOOST_INCLUDEDIR=/io/boost_1_75_0/boost'
@@ -24,18 +25,18 @@ steps:
     dir: 'builder'
   # Push the image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$COMMIT_SHA']
+    args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA']
   # Tag the image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['tag', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$COMMIT_SHA', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$COMMIT_SHA']
+    args: ['tag', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA']
   # Push the image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$COMMIT_SHA']
+    args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA']
 images:
-  - 'gcr.io/$PROJECT_ID/$_PACKAGE_I_BRANCH:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA'
 options:
   substitutionOption: ALLOW_LOOSE
   logging: CLOUD_LOGGING_ONLY
   pool:
     name: 'projects/$PROJECT_ID/locations/us-central1/workerPools/rippled'
-timeout: 1800s
+timeout: 3600s
