--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ DOOR_ACCOUNT_SEED=
 
 # Environment variables for running a sidechain
 # ---------------------------------------------
-# version of rippled to run in standalone mode on the mainchain
+# executable version of rippled to run in standalone mode on the mainchain
 RIPPLED_MAINCHAIN_EXE=
-# version of rippled to run on the sidechain
+# executable version of rippled to run on the sidechain
 RIPPLED_SIDECHAIN_EXE=
