--- a/amendments/icv2/Dockerfile
+++ b/amendments/icv2/Dockerfile
@@ -1,10 +1,7 @@
-FROM gcr.io/metaxrplorer/icv2:latest as builder
+FROM gcr.io/metaxrplorer/icv2:latest as base
 
+# RIPPLED (BUILD) IS IN /app/rippled
 WORKDIR /app
-
-FROM ubuntu:kinetic as deployer
-
-WORKDIR /deploy
 
 LABEL maintainer="w@xrpl-labs.com"
 
@@ -13,12 +10,17 @@ RUN export LANGUAGE=C.UTF-8; export LANG=C.UTF-8; export LC_ALL=C.UTF-8; export 
 COPY config /config
 COPY entrypoint /entrypoint.sh
 
-COPY --from=builder /app/rippled /deploy/rippled
-
 RUN chmod +x /entrypoint.sh && \
     echo '#!/bin/bash' > /usr/bin/server_info && echo '/entrypoint.sh server_info' >> /usr/bin/server_info && \
     chmod +x /usr/bin/server_info
 
 EXPOSE 80 443 5005 6006 51235
 
+FROM base AS genesis
+RUN echo "BUILDING GENESIS RIPPLED"
+ENTRYPOINT [ "/entrypoint.sh", "-a" ]
+
+
+FROM base AS production
+RUN echo "BUILDING PRODUCTION RIPPLED"
 ENTRYPOINT [ "/entrypoint.sh" ]
