--- a/template/config/rippled.cfg
+++ b/template/config/rippled.cfg
@@ -4,8 +4,8 @@ port_ws_public
 
 # port_peer
 # port_ws_admin_local
-# ssl_key = /etc/ssl/private/server.key
-# ssl_cert = /etc/ssl/certs/server.crt
+ssl_key = /etc/ssl/private/server.key
+ssl_cert = /etc/ssl/certs/server.crt
 
 [port_rpc_admin_local]
 port = 5005
@@ -14,14 +14,14 @@ admin = 127.0.0.1
 protocol = http
 
 [port_ws_public]
-port = 80
-ip = 0.0.0.0
-protocol = ws
+port = 6005
+ip = 127.0.0.1
+protocol = wss
 
-# [port_peer]
-# port = 51235
-# ip = 0.0.0.0
-# protocol = peer
+[port_peer]
+port = 51235
+ip = 0.0.0.0
+protocol = peer
 
 # [port_ws_admin_local]
 # port = 6006
@@ -30,7 +30,7 @@ protocol = ws
 # protocol = ws
 
 [node_size]
-small
+medium
 
 # tiny
 # small
@@ -46,13 +46,13 @@ advisory_delete=0
 # How many ledgers do we want to keep (history)?
 # Integer value that defines the number of ledgers
 # between online deletion events
-online_delete=256
+online_delete=full
 
 [ledger_history]
 # How many ledgers do we want to keep (history)?
 # Integer value (ledger count)
 # or (if you have lots of TB SSD storage): 'full'
-256
+250
 
 [database_path]
 /var/lib/rippled/db
@@ -67,7 +67,12 @@ time.nist.gov
 pool.ntp.org
 
 [ips]
-r.ripple.com 51235
+# transia ports: 50000 - 50100
+branch.example.com 50001
+
+[network_id]
+# USE PORT ADDRESS
+50001
 
 [validators_file]
 validators.txt
