--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,55 +3,65 @@
 steps:
   # BUILD RIPPLED
   # Pull the latest image
-  - name: 'gcr.io/cloud-builders/docker'
+  # - name: 'gcr.io/cloud-builders/docker'
+  #   entrypoint: 'bash'
+  #   args:
+  #     - '-c'
+  #     - |
+  #       docker pull gcr.io/$PROJECT_ID/$_NAME:latest || exit 0
+  # # Build & Tag the image
+  # - name: 'gcr.io/cloud-builders/docker'
+  #   args: [
+  #     'build',
+  #     '-t', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA',
+  #     '-f', 'Dockerfile',
+  #     '--cache-from', 'gcr.io/$PROJECT_ID/$_NAME:latest', '.',
+  #     '--build-arg', 'REPO=$_REPO',
+  #     '--build-arg', 'BRANCH=$_BRANCH',
+  #     '--build-arg', 'BOOST_ROOT=/io/boost_1_75_0',
+  #     '--build-arg', 'Boost_LIBRARY_DIRS=/io/boost_1_75_0/libs',
+  #     '--build-arg', 'BOOST_INCLUDEDIR=/io/boost_1_75_0/boost'
+  #   ]
+  #   dir: 'builder'
+  # # Push the image
+  # - name: 'gcr.io/cloud-builders/docker'
+  #   args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA']
+  # # Tag the image
+  # - name: 'gcr.io/cloud-builders/docker'
+  #   args: ['tag', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA', 'gcr.io/$PROJECT_ID/$_NAME:latest']
+  # # Push the image
+  # - name: 'gcr.io/cloud-builders/docker'
+  #   args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:latest']
+  # TAG & RELEASE RIPPLED
+  # Access the id_github file from Secret Manager, and setup SSH
+  - name: 'gcr.io/cloud-builders/git'
+    secretEnv: ['SSH_KEY']
     entrypoint: 'bash'
     args:
-      - '-c'
-      - |
-        docker pull gcr.io/$PROJECT_ID/$_NAME:latest || exit 0
-  # Build & Tag the image
+    - -c
+    - |
+      echo "$$SSH_KEY" >> /root/.ssh/id_rsa
+      chmod 400 /root/.ssh/id_rsa
+      cp known_hosts.github /root/.ssh/known_hosts
+    volumes:
+    - name: 'ssh'
+      path: /root/.ssh
+  # Build the dependencies
   - name: 'gcr.io/cloud-builders/docker'
-    args: [
-      'build',
-      '-t', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA',
-      '-f', 'Dockerfile',
-      '--cache-from', 'gcr.io/$PROJECT_ID/$_NAME:latest', '.',
-      '--build-arg', 'REPO=$_REPO',
-      '--build-arg', 'BRANCH=$_BRANCH',
-      '--build-arg', 'BOOST_ROOT=/io/boost_1_75_0',
-      '--build-arg', 'Boost_LIBRARY_DIRS=/io/boost_1_75_0/libs',
-      '--build-arg', 'BOOST_INCLUDEDIR=/io/boost_1_75_0/boost'
-    ]
-    dir: 'builder'
-  # Push the image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA']
-  # Tag the image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['tag', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA', 'gcr.io/$PROJECT_ID/$_NAME:latest']
-  # Push the image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:latest']
-  # DEPLOY RIPPLED
-  # Build the container image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [
-      'build', 
-      '-t', 
-      'gcr.io/$PROJECT_ID/$_NAME:deploy', 
-      '.'
-    ]
-    dir: '$_DIR/$_NAME'
-  # Push the container image to Container Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:deploy']
-  # Deploy container image Kubes
+    entrypoint: 'sh'
+    args: ['-c', 'release.sh', 'gcr.io/$PROJECT_ID', '$_NAME', 'latest', '$_DIR/$_NAME']
+    volumes:
+    - name: 'ssh'
+      path: /root/.ssh
 images:
   - 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA'
-  - 'gcr.io/$PROJECT_ID/$_NAME:deploy'
 options:
   substitutionOption: ALLOW_LOOSE
   logging: CLOUD_LOGGING_ONLY
   pool:
     name: 'projects/$PROJECT_ID/locations/us-central1/workerPools/rippled'
+availableSecrets:
+  secretManager:
+  - versionName: projects/$PROJECT_ID/secrets/release-key/versions/latest
+    env: 'SSH_KEY'
 timeout: 6600s
