--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,38 +1,14 @@
-# gcloud builds submit --config ./tools/cloudbuild.yaml --region=us-central1 --substitutions=_REPO=https://github.com/RichardAH/rippled.git,_BRANCH=PaychanAndEscrowForTokens,_NAME=icv2,_DIR=amendments
+# gcloud builds submit --config cloudbuild.yaml --region=us-central1 --substitutions=_REPO=https://github.com/RichardAH/rippled.git,_BRANCH=PaychanAndEscrowForTokens,_NAME=icv2,_DIR=amendments
 # NOTE: This is triggered for each sidechain.
 steps:
   # BUILD RIPPLED
-  # Pull the latest image
-  # - name: 'gcr.io/cloud-builders/docker'
-  #   entrypoint: 'bash'
-  #   args:
-  #     - '-c'
-  #     - |
-  #       docker pull gcr.io/$PROJECT_ID/$_NAME:latest || exit 0
-  # # Build & Tag the image
-  # - name: 'gcr.io/cloud-builders/docker'
-  #   args: [
-  #     'build',
-  #     '-t', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA',
-  #     '-f', 'Dockerfile',
-  #     '--cache-from', 'gcr.io/$PROJECT_ID/$_NAME:latest', '.',
-  #     '--build-arg', 'REPO=$_REPO',
-  #     '--build-arg', 'BRANCH=$_BRANCH',
-  #     '--build-arg', 'BOOST_ROOT=/io/boost_1_75_0',
-  #     '--build-arg', 'Boost_LIBRARY_DIRS=/io/boost_1_75_0/libs',
-  #     '--build-arg', 'BOOST_INCLUDEDIR=/io/boost_1_75_0/boost'
-  #   ]
-  #   dir: 'builder'
-  # # Push the image
-  # - name: 'gcr.io/cloud-builders/docker'
-  #   args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA']
-  # # Tag the image
-  # - name: 'gcr.io/cloud-builders/docker'
-  #   args: ['tag', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA', 'gcr.io/$PROJECT_ID/$_NAME:latest']
-  # # Push the image
-  # - name: 'gcr.io/cloud-builders/docker'
-  #   args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:latest']
-  # TAG & RELEASE RIPPLED
+  Pull the latest image
+  - name: 'gcr.io/cloud-builders/docker'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        docker pull gcr.io/$PROJECT_ID/$_NAME:latest || exit 0
   # Access the id_github file from Secret Manager, and setup SSH
   - name: 'gcr.io/cloud-builders/git'
     secretEnv: ['SSH_KEY']
@@ -46,15 +22,38 @@ steps:
     volumes:
     - name: 'ssh'
       path: /root/.ssh
-  # Build the dependencies
+  # Build & Tag the image
   - name: 'gcr.io/cloud-builders/docker'
-    entrypoint: 'sh'
-    args: ['-c', 'release.sh', 'gcr.io/$PROJECT_ID', '$_NAME', 'latest', '$_DIR/$_NAME']
+    args: [
+      'build',
+      '-t', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA',
+      '-f', 'Dockerfile',
+      '--cache-from', 'gcr.io/$PROJECT_ID/$_NAME:latest', '.',
+      '--build-arg', 'REPO=$_REPO',
+      '--build-arg', 'BRANCH=$_BRANCH',
+      '--build-arg', 'NAME=$_NAME',
+      '--build-arg', 'VERSION=$_VERSION',
+      '--build-arg', 'BOOST_ROOT=/io/boost_1_75_0',
+      '--build-arg', 'Boost_LIBRARY_DIRS=/io/boost_1_75_0/libs',
+      '--build-arg', 'BOOST_INCLUDEDIR=/io/boost_1_75_0/boost'
+      # '--build-arg', 'GITHUB_TOKEN=$_GITHUB_TOKEN',
+    ]
+    dir: 'builder'
     volumes:
     - name: 'ssh'
       path: /root/.ssh
+  # Push the image
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA']
+  # Tag the image
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['tag', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA', 'gcr.io/$PROJECT_ID/$_NAME:latest']
+  # Push the image
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:latest']
 images:
   - 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA'
+serviceAccount: 'projects/$PROJECT_ID/serviceAccounts/$PROJECT_ID@appspot.gserviceaccount.com'
 options:
   substitutionOption: ALLOW_LOOSE
   logging: CLOUD_LOGGING_ONLY
