--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -42,8 +42,8 @@ ARG NAME
 ENV NAME $NAME
 ARG VERSION
 ENV VERSION $VERSION
-# ARG GITHUB_TOKEN
-# ENV GITHUB_TOKEN $GITHUB_TOKEN
+ARG GITHUB_TOKEN
+ENV GITHUB_TOKEN $GITHUB_TOKEN
 
 RUN apt-get update && \
     apt-get upgrade -y && \
