--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,8 +14,9 @@ steps:
     args: [
       'build',
       '-t', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA',
-      '-f', 'Dockerfile',
-      '--cache-from', 'gcr.io/$PROJECT_ID/$_NAME:latest', '.',
+      '-f', 'builder/Dockerfile',
+      '--cache-from', 'gcr.io/$PROJECT_ID/$_NAME:latest',
+      '.',
       '--build-arg', 'REPO=$_REPO',
       '--build-arg', 'BRANCH=$_BRANCH',
       '--build-arg', 'NAME=$_NAME',
@@ -25,7 +26,6 @@ steps:
       '--build-arg', 'BOOST_INCLUDEDIR=/io/boost_1_75_0/boost',
       '--build-arg', 'GITHUB_TOKEN=$_GITHUB_TOKEN'
     ]
-    dir: 'builder'
   # Push the image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA']
