--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,6 +11,7 @@ steps:
         docker pull gcr.io/$PROJECT_ID/$_NAME:latest || exit 0
   # Build & Tag the image
   - name: 'gcr.io/cloud-builders/docker'
+    secretEnv: ['GITHUB_TOKEN']
     args: [
       'build',
       '-t', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA',
@@ -23,8 +24,7 @@ steps:
       '--build-arg', 'VERSION=$_VERSION',
       '--build-arg', 'BOOST_ROOT=/io/boost_1_75_0',
       '--build-arg', 'Boost_LIBRARY_DIRS=/io/boost_1_75_0/libs',
-      '--build-arg', 'BOOST_INCLUDEDIR=/io/boost_1_75_0/boost',
-      '--build-arg', 'GITHUB_TOKEN=$_GITHUB_TOKEN'
+      '--build-arg', 'BOOST_INCLUDEDIR=/io/boost_1_75_0/boost'
     ]
   # Push the image
   - name: 'gcr.io/cloud-builders/docker'
@@ -43,4 +43,8 @@ options:
   logging: CLOUD_LOGGING_ONLY
   pool:
     name: 'projects/$PROJECT_ID/locations/us-central1/workerPools/rippled'
+availableSecrets:
+  secretManager:
+  - versionName: projects/$PROJECT_ID/secrets/release-key/versions/latest
+    env: 'GITHUB_TOKEN'
 timeout: 6600s
