--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,7 +24,8 @@ steps:
       '--build-arg', 'VERSION=$_VERSION',
       '--build-arg', 'BOOST_ROOT=/io/boost_1_75_0',
       '--build-arg', 'Boost_LIBRARY_DIRS=/io/boost_1_75_0/libs',
-      '--build-arg', 'BOOST_INCLUDEDIR=/io/boost_1_75_0/boost'
+      '--build-arg', 'BOOST_INCLUDEDIR=/io/boost_1_75_0/boost',
+      '--build-arg', 'GITHUB_TOKEN=$$GITHUB_TOKEN'
     ]
   # Push the image
   - name: 'gcr.io/cloud-builders/docker'
