--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,20 +2,20 @@
 # NOTE: This is triggered for each sidechain.
 steps:
   # BUILD RIPPLED
-  # Pull the latest image
+  # Pull the base image
   - name: 'gcr.io/cloud-builders/docker'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        docker pull gcr.io/$PROJECT_ID/$_NAME:latest || exit 0
-  # Build & Tag the image
+        docker pull gcr.io/$PROJECT_ID/$_NAME:base || exit 0
+  # Build & Tag the 
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'build',
       '-t', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA',
       '-f', 'Dockerfile',
-      '--cache-from', 'gcr.io/$PROJECT_ID/$_NAME:latest',
+      '--cache-from', 'gcr.io/$PROJECT_ID/$_NAME:base',
       '.',
       '--build-arg', 'REPO=$_REPO',
       '--build-arg', 'BRANCH=$_BRANCH',
@@ -29,16 +29,37 @@ steps:
     args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA']
   # Tag the image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['tag', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA', 'gcr.io/$PROJECT_ID/$_NAME:latest']
+    args: ['tag', 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA', 'gcr.io/$PROJECT_ID/$_NAME:base']
+  # Push the image
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:base']
+  # Build & Tag the image
+  - name: 'gcr.io/cloud-builders/docker'
+    args: [
+      'build',
+      '-t', 'gcr.io/$PROJECT_ID/$_NAME:$_VERSION',
+      '-f', 'Dockerfile',
+      '.'
+    ]
+    dir: '_DIR/$_NAME'
+  # Push the image
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:$_VERSION']
+  # Tag the image
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['tag', 'gcr.io/$PROJECT_ID/$_NAME:$_VERSION', 'gcr.io/$PROJECT_ID/$_NAME:latest']
   # Push the image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:latest']
 images:
   - 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/$_NAME:base'
+  - 'gcr.io/$PROJECT_ID/$_NAME:$_VERSION'
+  - 'gcr.io/$PROJECT_ID/$_NAME:latest'
 serviceAccount: 'projects/$PROJECT_ID/serviceAccounts/$PROJECT_ID@appspot.gserviceaccount.com'
 options:
   substitutionOption: ALLOW_LOOSE
   logging: CLOUD_LOGGING_ONLY
   pool:
     name: 'projects/$PROJECT_ID/locations/us-central1/workerPools/rippled'
-timeout: 6600s
+timeout: 1500s
