--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -29,10 +29,28 @@ RUN cd build && cmake --build . -j17 && strip -s rippled
 
 ENTRYPOINT /bin/bash
 
+FROM ubuntu:bionic as definitions
+WORKDIR /app
+
+ARG REPO
+ENV REPO $REPO
+ARG BRANCH
+ENV BRANCH $BRANCH
+
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    apt-get install -y git
+
+COPY --from=builder /app/build /app/build
+
+RUN git clone https://github.com/RichardAH/xrpl-codec-gen.git
+RUN cd xrpl-codec-gen && node gen.js /app/build > definitions.json
+
 FROM ubuntu:kinetic as deployer
 
 WORKDIR /app
 
+COPY --from=definitions /app/build/definitions.json /app/definitions.json
 COPY --from=builder /app/build/rippled /app/rippled
 
 ENTRYPOINT /bin/bash
