--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -51,11 +51,40 @@ steps:
   # Push the image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:latest']
+  # BUILD WITNESS
+  # Pull the base image
+  - name: 'gcr.io/cloud-builders/docker'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        docker pull gcr.io/$PROJECT_ID/xrpld-witness:latest || exit 0
+  # Build & Tag the 
+  - name: 'gcr.io/cloud-builders/docker'
+    args: [
+      'build',
+      '-t', 'gcr.io/$PROJECT_ID/xrpld-witness:$COMMIT_SHA',
+      '-f', 'witness.dockerfile',
+      '--cache-from', 'gcr.io/$PROJECT_ID/xrpld-witness:latest',
+      '.',
+    ]
+    dir: 'builder'
+  # Push the image
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/xrpld-witness:$COMMIT_SHA']
+  # Tag the image
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['tag', 'gcr.io/$PROJECT_ID/xrpld-witness:$COMMIT_SHA', 'gcr.io/$PROJECT_ID/xrpld-witness:latest']
+  # Push the image
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/xrpld-witness:latest']
 images:
   - 'gcr.io/$PROJECT_ID/$_NAME:$COMMIT_SHA'
   - 'gcr.io/$PROJECT_ID/$_NAME:base'
   - 'gcr.io/$PROJECT_ID/$_NAME:$_VERSION'
   - 'gcr.io/$PROJECT_ID/$_NAME:latest'
+  - 'gcr.io/$PROJECT_ID/xrpld-witness:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/xrpld-witness:latest'
 serviceAccount: 'projects/$PROJECT_ID/serviceAccounts/$PROJECT_ID@appspot.gserviceaccount.com'
 options:
   substitutionOption: ALLOW_LOOSE
