--- a/amendments/xls20/config/rippled.cfg
+++ b/amendments/xls20/config/rippled.cfg
@@ -1,14 +1,12 @@
 [server]
 port_rpc_admin_local
 port_ws_public
-port_rpc
+port_ws_admin_local
 
-[port_rpc]
-# ssl_key = /config/https.key
-# ssl_cert = /config/https.crt
-port = 443
-protocol = https
-ip = 0.0.0.0
+# port_peer
+# port_ws_admin_local
+# ssl_key = /etc/ssl/private/server.key
+# ssl_cert = /etc/ssl/certs/server.crt
 
 [port_rpc_admin_local]
 port = 5005
@@ -21,8 +19,19 @@ port = 80
 ip = 0.0.0.0
 protocol = ws
 
+# [port_peer]
+# port = 51235
+# ip = 0.0.0.0
+# protocol = peer
+
+[port_ws_admin_local]
+port = 6006
+ip = 0.0.0.0
+admin = 0.0.0.0
+protocol = ws
+
 [node_size]
-medium
+small
 
 # tiny
 # small
@@ -38,13 +47,13 @@ advisory_delete=0
 # How many ledgers do we want to keep (history)?
 # Integer value that defines the number of ledgers
 # between online deletion events
-online_delete=full
+online_delete=256
 
 [ledger_history]
 # How many ledgers do we want to keep (history)?
 # Integer value (ledger count)
 # or (if you have lots of TB SSD storage): 'full'
-250
+256
 
 [database_path]
 /var/lib/rippled/db
@@ -59,12 +68,7 @@ time.nist.gov
 pool.ntp.org
 
 [ips]
-# transia ports: 50000 - 50100
-r.altnet.rippletest.net 51235
-
-[network_id]
-# USE PORT ADDRESS
-testnet
+r.ripple.com 51235
 
 [validators_file]
 validators.txt
