--- a/amendments/xls20/Dockerfile
+++ b/amendments/xls20/Dockerfile
@@ -1,9 +1,9 @@
-FROM gcr.io/metaxrplorer/testnet:base as base
+FROM gcr.io/metaxrplorer/xls20:base as base
 
 # RIPPLED (BUILD) IS IN /app/rippled
 WORKDIR /app
 
-LABEL maintainer="w@xrpl-labs.com"
+LABEL maintainer="dangell@transia.co"
 
 RUN export LANGUAGE=C.UTF-8; export LANG=C.UTF-8; export LC_ALL=C.UTF-8; export DEBIAN_FRONTEND=noninteractive
 
