--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,4 @@
-# gcloud builds submit --config cloudbuild.yaml --region=us-central1 --substitutions=_REPO=https://github.com/RichardAH/rippled.git,_BRANCH=PaychanAndEscrowForTokens,_NAME=icv2,_DIR=amendments
+# gcloud builds submit --config cloudbuild.yaml --region=us-central1 --substitutions=_REPO=https://github.com/RichardAH/rippled.git,_BRANCH=PaychanAndEscrowForTokens,_NAME=icv2,_DIR=amendments,_TARGET=genesis
 # NOTE: This is triggered for each sidechain.
 steps:
   # BUILD RIPPLED
@@ -33,11 +33,13 @@ steps:
   # Push the image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/$_NAME:base']
+  # DEPLOY RIPPLED
   # Build & Tag the image
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'build',
       '-t', 'gcr.io/$PROJECT_ID/$_NAME:$_VERSION',
+      '--target', '$_TARGET',
       '-f', 'Dockerfile',
       '.'
     ]
