--- a/amendments/xls20/Dockerfile
+++ b/amendments/xls20/Dockerfile
@@ -16,11 +16,12 @@ RUN chmod +x /entrypoint.sh && \
 
 EXPOSE 80 443 5005 6006 51235
 
-FROM base AS genesis
-RUN echo "BUILDING GENESIS RIPPLED"
-ENTRYPOINT [ "/entrypoint.sh", "-a" ]
-
+RUN export DOCKER_BUILDKIT=1
 
 FROM base AS production
 RUN echo "BUILDING PRODUCTION RIPPLED"
 ENTRYPOINT [ "/entrypoint.sh" ]
+
+FROM base AS genesis
+RUN echo "BUILDING GENESIS RIPPLED"
+ENTRYPOINT [ "/entrypoint.sh", "-a" ]
