--- a/amendments/xchain/Dockerfile
+++ b/amendments/xchain/Dockerfile
@@ -1,9 +1,9 @@
-FROM gcr.io/metaxrplorer/sidechain:base as base
+FROM gcr.io/metaxrplorer/xchain:base as base
 
 # RIPPLED (BUILD) IS IN /app/rippled
 WORKDIR /app
 
-LABEL maintainer="w@xrpl-labs.com"
+LABEL maintainer="dangell@transia.co"
 
 RUN export LANGUAGE=C.UTF-8; export LANG=C.UTF-8; export LC_ALL=C.UTF-8; export DEBIAN_FRONTEND=noninteractive
 
@@ -16,11 +16,12 @@ RUN chmod +x /entrypoint.sh && \
 
 EXPOSE 80 443 5005 6006 51235
 
-FROM base AS genesis
-RUN echo "GENESIS RIPPLED"
-ENTRYPOINT [ "/entrypoint.sh", "-a" ]
-
+RUN export DOCKER_BUILDKIT=1
 
 FROM base AS production
-RUN echo "PRODUCTION RIPPLED"
+RUN echo "BUILDING PRODUCTION RIPPLED"
 ENTRYPOINT [ "/entrypoint.sh" ]
+
+FROM base AS genesis
+RUN echo "BUILDING GENESIS RIPPLED"
+ENTRYPOINT [ "/entrypoint.sh", "-a" ]
