--- a/cloudbuild.witness.yaml
+++ b/cloudbuild.witness.yaml
@@ -15,8 +15,11 @@ steps:
       'build',
       '-t', 'gcr.io/$PROJECT_ID/xrpld-witness:$COMMIT_SHA',
       '-f', 'witness.dockerfile',
-      '--cache-from', 'gcr.io/$PROJECT_ID/xrpld-witness:latest',
       '.',
+      '--cache-from', 'gcr.io/$PROJECT_ID/xrpld-witness:latest',
+      '--build-arg', 'BOOST_ROOT=/io/boost_1_79_0',
+      '--build-arg', 'Boost_LIBRARY_DIRS=/io/boost_1_79_0/libs',
+      '--build-arg', 'BOOST_INCLUDEDIR=/io/boost_1_79_0/boost'
     ]
     dir: 'builder'
   # Push the image
