--- a/cloudbuild.witness.yaml
+++ b/cloudbuild.witness.yaml
@@ -8,32 +8,32 @@ steps:
     args:
       - '-c'
       - |
-        docker pull gcr.io/$PROJECT_ID/xrpld-witness:latest || exit 0
+        docker pull gcr.io/$PROJECT_ID/witness:base || exit 0
   # Build & Tag the 
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'build',
-      '-t', 'gcr.io/$PROJECT_ID/xrpld-witness:$COMMIT_SHA',
+      '-t', 'gcr.io/$PROJECT_ID/witness:$COMMIT_SHA',
       '-f', 'witness.dockerfile',
       '.',
-      '--cache-from', 'gcr.io/$PROJECT_ID/xrpld-witness:latest',
-      '--build-arg', 'BOOST_ROOT=/io/boost_1_79_0',
-      '--build-arg', 'Boost_LIBRARY_DIRS=/io/boost_1_79_0/libs',
-      '--build-arg', 'BOOST_INCLUDEDIR=/io/boost_1_79_0/boost'
+      '--cache-from', 'gcr.io/$PROJECT_ID/witness:base',
+      '--build-arg', 'BOOST_ROOT=/app/boost_1_79_0',
+      '--build-arg', 'Boost_LIBRARY_DIRS=/app/boost_1_79_0/libs',
+      '--build-arg', 'BOOST_INCLUDEDIR=/app/boost_1_79_0/boost'
     ]
     dir: 'builder'
   # Push the image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/xrpld-witness:$COMMIT_SHA']
+    args: ['push', 'gcr.io/$PROJECT_ID/witness:$COMMIT_SHA']
   # Tag the image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['tag', 'gcr.io/$PROJECT_ID/xrpld-witness:$COMMIT_SHA', 'gcr.io/$PROJECT_ID/xrpld-witness:latest']
+    args: ['tag', 'gcr.io/$PROJECT_ID/witness:$COMMIT_SHA', 'gcr.io/$PROJECT_ID/witness:base']
   # Push the image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/xrpld-witness:latest']
+    args: ['push', 'gcr.io/$PROJECT_ID/witness:base']
 images:
-  - 'gcr.io/$PROJECT_ID/xrpld-witness:$COMMIT_SHA'
-  - 'gcr.io/$PROJECT_ID/xrpld-witness:latest'
+  - 'gcr.io/$PROJECT_ID/witness:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/witness:base'
 serviceAccount: 'projects/$PROJECT_ID/serviceAccounts/$PROJECT_ID@appspot.gserviceaccount.com'
 options:
   substitutionOption: ALLOW_LOOSE
