--- a/xchains/comms/Dockerfile
+++ b/xchains/comms/Dockerfile
@@ -1,5 +1,4 @@
-# docker build 
-
+# docker build -t gcr.io/metaxrplorer/witness:base -f Dockerfile . --build-arg XCHAIN_CONFIG_DIR=app/config --build-arg RIPPLED_EXE=app/rippled --build-arg WITNESSD_EXE=app/witness 
 FROM gcr.io/metaxrplorer/xchain:base as rippled_base
 ENTRYPOINT /bin/bash
 
