--- a/xchains/comms/docker-compose.yml
+++ b/xchains/comms/docker-compose.yml
@@ -11,10 +11,8 @@ services:
       - "5005:5005"
       - "6006:6006"
       - "51235:51235"
-    volumes:
+    # volumes:
       # - ./xchains/comms/config:/app/config
-      - ./rippled-xchain-latest/rippled:/app/rippled
-      - ./witness-latest/witness:/app/witness
     command: >
       poerty shell ./scripts/tutorial.sh
   explorer:
