--- a/amendments/xbridge/config/rippled.cfg
+++ b/amendments/xbridge/config/rippled.cfg
@@ -68,11 +68,21 @@ pool.ntp.org
 
 [ips]
 # 50000 - 50100
-icv2.transia.co 50001
+xbridge.transia.co 50001
 
 [network_id]
 # USE PORT ADDRESS
 50001
+
+[features]
+CheckCashMakesTrustLine
+NonFungibleTokensV1
+ExpandedSignerList
+fixNFTokenDirV1
+fixNFTokenNegOffer
+NonFungibleTokensV1_1
+fixTrustLinesToSelf
+XChainBridge
 
 [validators_file]
 validators.txt
