--- a/amendments/xbridge/config/rippled.cfg
+++ b/amendments/xbridge/config/rippled.cfg
@@ -1,6 +1,7 @@
 [server]
 port_rpc_admin_local
 port_ws_public
+port_ws_admin_local
 
 # port_peer
 # port_ws_admin_local
@@ -14,23 +15,23 @@ admin = 127.0.0.1
 protocol = http
 
 [port_ws_public]
-port = 6005
-ip = 127.0.0.1
-protocol = wss
-
-[port_peer]
-port = 51235
+port = 80
 ip = 0.0.0.0
-protocol = peer
+protocol = ws
 
-# [port_ws_admin_local]
-# port = 6006
-# ip = 127.0.0.1
-# admin = 127.0.0.1
-# protocol = ws
+# [port_peer]
+# port = 51235
+# ip = 0.0.0.0
+# protocol = peer
+
+[port_ws_admin_local]
+port = 6006
+ip = 0.0.0.0
+admin = 0.0.0.0
+protocol = ws
 
 [node_size]
-medium
+small
 
 # tiny
 # small
@@ -46,13 +47,13 @@ advisory_delete=0
 # How many ledgers do we want to keep (history)?
 # Integer value that defines the number of ledgers
 # between online deletion events
-online_delete=full
+online_delete=256
 
 [ledger_history]
 # How many ledgers do we want to keep (history)?
 # Integer value (ledger count)
 # or (if you have lots of TB SSD storage): 'full'
-250
+256
 
 [database_path]
 /var/lib/rippled/db
@@ -67,22 +68,7 @@ time.nist.gov
 pool.ntp.org
 
 [ips]
-# 50000 - 50100
-xbridge.transia.co 50001
-
-[network_id]
-# USE PORT ADDRESS
-50001
-
-[features]
-CheckCashMakesTrustLine
-NonFungibleTokensV1
-ExpandedSignerList
-fixNFTokenDirV1
-fixNFTokenNegOffer
-NonFungibleTokensV1_1
-fixTrustLinesToSelf
-XChainBridge
+r.ripple.com 51235
 
 [validators_file]
 validators.txt
@@ -97,5 +83,15 @@ validators.txt
 # error
 # fatal
 
-# [ssl_verify]
-# 1
+[ssl_verify]
+1
+
+[features]
+CheckCashMakesTrustLine
+NonFungibleTokensV1
+ExpandedSignerList
+fixNFTokenDirV1
+fixNFTokenNegOffer
+NonFungibleTokensV1_1
+fixTrustLinesToSelf
+XChainBridge
