--- a/amendments/xls20/config/rippled.cfg
+++ b/amendments/xls20/config/rippled.cfg
@@ -74,7 +74,7 @@ r.ripple.com 51235
 validators.txt
 
 [rpc_startup]
-{ "command": "log_level", "severity": "info" }
+{ "command": "log_level", "severity": "trace" }
 
 # severity (order: lots of information .. only errors)
 # debug
