--- a/builder/cloudbuild/witness.yaml
+++ b/builder/cloudbuild/witness.yaml
@@ -21,7 +21,7 @@ steps:
       '--build-arg', 'Boost_LIBRARY_DIRS=/app/boost_1_75_0/libs',
       '--build-arg', 'BOOST_INCLUDEDIR=/app/boost_1_75_0/boost'
     ]
-    dir: 'builder/cloudbuild/'
+    dir: 'builder/docker/'
   # Push the image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/witness:$COMMIT_SHA']
