--- a/xchains/comms/docker-compose.yml
+++ b/xchains/comms/docker-compose.yml
@@ -1,26 +1,92 @@
+# docker compose -f docker-compose.yml up --build --force-recreate -d
 version: '3.4'
 services:
-  witness:
+  issuing_chain:
     build:
-      context: ./xchains/comms
-      dockerfile: Dockerfile
-    container_name: xrpld-witness
+      dockerfile: rippled.dockerfile
+      target: issuing
+      args:
+        DIR: issuing_chain
+    container_name: issuing-chain
     ports:
-      - "80:80"
-      - "443:443"
+      - "5006:5006"
+      - "6007:6007"
+      - "6008:6008"
+      - "51236:51236"
+    networks:
+      - witnessd
+  locking_chain:
+    build:
+      dockerfile: rippled.dockerfile
+      target: locking
+      args:
+        DIR: locking_chain
+    container_name: locking-chain
+    ports:
       - "5005:5005"
       - "6006:6006"
+      - "6005:6005"
       - "51235:51235"
-    # volumes:
-      # - ./xchains/comms/config:/app/config
-    command: >
-      poerty shell ./scripts/tutorial.sh
-  explorer:
+    networks:
+      - witnessd
+  witness0:
+    tty: true
     build:
-      context: ./builder
-      dockerfile: explorer.dockerfile
+      dockerfile: witnessd.dockerfile
+      args:
+        DIR: witness0
+        PORT: 6010
+    container_name: witness0
+    ports:
+      - "6010:6010"
+    volumes:
+      - ./config/witness0/db:/config/db
+    networks:
+      - witnessd
+  witness1:
+    tty: true
+    build:
+      dockerfile: witnessd.dockerfile
+      args:
+        DIR: witness1
+        PORT: 6011
+    container_name: witness1
+    ports:
+      - "6011:6011"
+    volumes:
+      - ./config/witness1/db:/config/db
+    networks:
+      - witnessd
+  witness2:
+    tty: true
+    build:
+      dockerfile: witnessd.dockerfile
+      args:
+        DIR: witness2
+        PORT: 6012
+    container_name: witness2
+    ports:
+      - "6012:6012"
+    volumes:
+      - ./config/witness2/db:/config/db
+    networks:
+      - witnessd
+  sidechain:
+    tty: true
+    build:
+      dockerfile: sidechain.dockerfile
+      args:
+        XCHAIN_CONFIG_DIR: /config
+    container_name: sidechain-py
+    networks:
+      - witnessd
+  explorer:
+    image: gcr.io/metaxrplorer/explorer:latest
     container_name: xrpld-explorer
     environment:
-      - VUE_APP_WSS_ENDPOINT=comms.transia.co
+      - VUE_APP_WSS_ENDPOINT=ws://0.0.0.0:6006
     ports:
       - "3000:3000"
+networks:
+  witnessd:
+    driver: bridge
