--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+firebase-debug.log*
+*.db
+__pycache__
+.idea/*
+*.pyc
+tmp
+.idea/
+/.eggs
+logs
+.pytest_cache
+.github
+
 # For Releasing
 release
 release.pub
@@ -7,3 +25,4 @@ release.info
 # release.sh
 rippled-*
 definitions.json
+db/
