--- a/amendments/xls20/config/rippled.cfg
+++ b/amendments/xls20/config/rippled.cfg
@@ -122,3 +122,6 @@ ExpandedSignerList # Default
 fixNFTokenDirV1 # Default
 fixNFTokenNegOffer # Default
 NonFungibleTokensV1_1 # Default
+fixTrustLinesToSelf # Default
+fixRemoveNFTokenAutoTrustLine # Default
+ImmediateOfferKilled # Default
