--- a/builder/cloudbuild/boost.yaml
+++ b/builder/cloudbuild/boost.yaml
@@ -8,29 +8,24 @@ steps:
     args:
       - '-c'
       - |
-        docker pull gcr.io/$PROJECT_ID/boost:latest || exit 0
+        docker pull gcr.io/$PROJECT_ID/boost:$_BOOST_VERSION || exit 0
   # Build & Tag the 
   - name: 'gcr.io/cloud-builders/docker'
     args: [
       'build',
-      '-t', 'gcr.io/$PROJECT_ID/boost:$COMMIT_SHA',
+      '-t', 'gcr.io/$PROJECT_ID/boost:$_BOOST_VERSION',
       '-f', 'boost.dockerfile',
       '.',
-      '--cache-from', 'gcr.io/$PROJECT_ID/boost:latest'
+      '--build-arg', 'BOOST_DIR=$_BOOST_DIR',
+      '--build-arg', 'BOOST_VERSION=$_BOOST_VERSION',
+      '--cache-from', 'gcr.io/$PROJECT_ID/boost:$_BOOST_VERSION'
     ]
     dir: 'builder/docker'
   # Push the image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/boost:$COMMIT_SHA']
-  # Tag the image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['tag', 'gcr.io/$PROJECT_ID/boost:$COMMIT_SHA', 'gcr.io/$PROJECT_ID/boost:latest']
-  # Push the image
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/boost:latest']
+    args: ['push', 'gcr.io/$PROJECT_ID/boost:$_BOOST_VERSION']
 images:
-  - 'gcr.io/$PROJECT_ID/boost:$COMMIT_SHA'
-  - 'gcr.io/$PROJECT_ID/boost:latest'
+  - 'gcr.io/$PROJECT_ID/boost:$_BOOST_VERSION'
 serviceAccount: 'projects/$PROJECT_ID/serviceAccounts/$PROJECT_ID@appspot.gserviceaccount.com'
 options:
   substitutionOption: ALLOW_LOOSE
