--- a/xchains/private-3-2/node1/config/rippled.cfg
+++ b/xchains/private-3-2/node1/config/rippled.cfg
@@ -19,12 +19,12 @@ port_peer
 # protocol = ws
 
 [port_peer]
-port = 51236
+port = 51235
 ip = 0.0.0.0
 protocol = peer
 
 [port_ws_admin_local]
-port = 6009
+port = 6008
 ip = 0.0.0.0
 admin = 0.0.0.0
 protocol = ws
@@ -66,9 +66,13 @@ time.apple.com
 time.nist.gov
 pool.ntp.org
 
+# [ips]
+# r.ripple.com 51235
+
 [ips_fixed]
-node1 51235
-# node2 51236
+# node1 51235
+node2 51236
+# node3 51237
 
 [peer_private]
 1
@@ -77,7 +81,7 @@ node1 51235
 validators.txt
 
 [validation_seed]
-saNhW2GVq1c7oSydMoeaQq2K1kuWS
+shoqEM9krJwcY5JyghefH5mjK3UJM
 
 [cluster_nodes]
 n9LbNAoipEPWW7vAfMoTydXXSDvuTcxw5e1u1HEdQmQodouxhWq9
