--- a/xchains/private-3-2/node3/config/rippled.cfg
+++ b/xchains/private-3-2/node3/config/rippled.cfg
@@ -19,12 +19,12 @@ port_peer
 # protocol = ws
 
 [port_peer]
-port = 51236
+port = 51237
 ip = 0.0.0.0
 protocol = peer
 
 [port_ws_admin_local]
-port = 6009
+port = 6010
 ip = 0.0.0.0
 admin = 0.0.0.0
 protocol = ws
@@ -68,20 +68,14 @@ pool.ntp.org
 
 [ips_fixed]
 node1 51235
-# node2 51236
+node2 51236
+# node3 51237
 
 [peer_private]
-1
+0
 
 [validators_file]
 validators.txt
-
-[validation_seed]
-saNhW2GVq1c7oSydMoeaQq2K1kuWS
-
-[cluster_nodes]
-n9LbNAoipEPWW7vAfMoTydXXSDvuTcxw5e1u1HEdQmQodouxhWq9
-n9L3UsutvxvnEai1pCDnaXRMmQCAEkqPsrKWME27mxWhb3vs3xzw
 
 [rpc_startup]
 { "command": "log_level", "severity": "debug" }
