--- a/xchains/private-3-2/docker-compose.yml
+++ b/xchains/private-3-2/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "6008:6008"
       - "51235:51235"
     networks:
-      - rippled-2
+      - rippled-32
     volumes:
       # - ./node3/keystore:/var/lib/rippled/keystore
       - ./node1/db:/var/lib/rippled/db
@@ -26,7 +26,20 @@ services:
       # - ./node3/keystore:/var/lib/rippled/keystore
       - ./node2/db:/var/lib/rippled/db
     networks:
-      - rippled-2
+      - rippled-32
+  node3:
+    build:
+      context: node3
+      dockerfile: Dockerfile
+    container_name: node3-chain
+    ports:
+      - "6010:6010"
+      - "51237:51237"
+    volumes:
+      # - ./node3/keystore:/var/lib/rippled/keystore
+      - ./node3/db:/var/lib/rippled/db
+    networks:
+      - rippled-32
 networks:
-  rippled-2:
+  rippled-32:
     driver: bridge
